// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Button/ButtonMenu Controlled smoke-test 1`] = `
<div class="mb-52">
  <button class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-3.5">
    <span class="ri-equalizer-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
    </span>
  </button>
</div>
`;

exports[`design-system/Button/ButtonMenu Default smoke-test 1`] = `
<div class="flex gap-24 justify-between mb-52">
  <button class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-3.5">
    <span class="ri-equalizer-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
    </span>
  </button>
  <button class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-3.5">
    <div class="text-primary fill-primary bg-primary-3 h-6 min-w-[1.5rem] text-xs p-1.5 inline-flex items-center justify-center gap-1 rounded-full border-2 border-grey-1 shadow absolute -top-2.5 -right-2.5">
      <span class="font-extrabold leading-none">
        2
      </span>
    </div>
    <span class="ri-equalizer-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
    </span>
  </button>
</div>
`;
